# fiware-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fiware_tool.py  fiware_ui.py  pyproject.toml  requirements.txt
ui/: architecture_helpers.py  sidebar.py  tab_architecture.py  tab_cratedb.py  tab_entities.py  tab_info.py  tab_metrics.py  tab_migration.py  tab_portainer.py  tab_service_groups.py  tab_subscriptions.py
