[project]
name = "fiware-ui"
version = "0.1.0"
description = "Streamlit dashboard for operating and monitoring a FIWARE stack"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit==1.56.0",
    "streamlit-authenticator==0.4.2",
    "requests==2.33.1",
    "pandas==3.0.2",
    "matplotlib==3.10.9",
    "graphviz==0.21",
    "paho-mqtt==2.1.0",
]

[tool.uv]
package = false